k3s/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: homelab-ingress
  namespace: homelab
spec:
  rules:
  - host: homelab.tino.sh
    http:
      paths:
      - pathType: Prefix
        path: /button
        backend:
          service:
            name: button-service
            port: 
              number: 7777
      - pathType: Prefix
        path: /
        backend:
          service:
            name: www-service
            port: 
              number: 7779
  tls:
  - hosts:
    - homelab.tino.sh
    secretName: homelab-tino-sh-tls
